# axis-projekt

./: .gitignore
analog/: condenser_mic_amp.asc  condenser_mic_amp.net  condenser_mic_amp.op.raw  condenser_mic_amp.raw
client/: .env.example  Cargo.toml
client-usb/: Cargo.toml
client-usb/src/: main.rs
client-usb/src/util/: camera.rs
client-web/: Cargo.toml
client-web/src/: main.rs
client-web/src/routes/api/: vapix.rs
client/src/: main.rs
client/src/routes/api/: mod.rs  vapix.rs
client/src/util/: camera.rs
firmware/: firmware.ino  platformio.ini
firmware/src/: firmware.ino
simulation/: algorithm_demo.py  arrival_time.py  arrival_time_test_cases.py  brainstorm.py  counter_logic.circ  error_simulation.py  localizer.py  mic_positions.py  sound_source.py
